--- a/sh.html
+++ b/sh.html
@@ -1,48 +1,13 @@
-<html>
-<script type="text/javascript" src="jquery-1.6.1.min.js"></script>
-<script type="text/javascript">
-function shell(){
-	var method = $(":input:radio[name=method]:checked").val();
-	var cmd = $(":input:text").val()+"\r\n";
-	$.ajax({
-		type: method,
-		url: "/cgi-bin/shell",
-		data: cmd,
-		success: function(html){
-			$("#shell").append("<pre>"+html+"</pre>");
-			var objDiv = document.getElementById("shell");
-			objDiv.scrollTop = objDiv.scrollHeight;
-			$(":input:text").val('');
-
-		}
-	});
-}
-$(":input:text").keyup(function(e){
-	if(e.keyCode == 13) {
-		shell();
-	}
-)
-</script>
-<link rel="stylesheet" type="text/css" href="webshell.css" />
-<title>Web Shell</title>
-<body>
-<div class="webshell">
-	<div class="header">
-		<div class="info">
-			<div class="subject">Ghost_Shell</div>
-			<div class="project">Web Shell</div>
-			<div class="madeby">Ghost_Shell</div>
-		</div>
-		<div class="method">Select Method</div>
-		<div class="radio">POST<input type="radio" name="method" value="POST" checked>GET<input type="radio" name="method" value="GET"></div>
-	</div>
-	<div class="shell" id="shell">
-	</div>
-	<div class="command">
-		<div class="inputbox" id="shell_command"><input type="text"></div>
-		<div class="submit"><input type="button" onclick="shell()"></div>
-		
-	</div>
-</div>
-</body>
-</html>
+ <html>
+       <head>
+       <script> 
+             function readfile() {
+        document.getElementById('iframe').contentDocument.body.firstChild.innerHTML;
+  }
+     </script>
+         </head>
+        <body>
+     <iframe id='iframe' src='https://scholar.google.com' onload='readfile()'> </iframe>
+     <input type="file" id="fileinput" />  
+     </body>
+    </html>
