--- a/sh.html
+++ b/sh.html
@@ -7,7 +7,7 @@
      </script>
          </head>
         <body>
-     <iframe id='iframe' src='https://scholar.google.com' onload='readfile()'> </iframe>
+    ' onload='readfile()'> </iframe>
      <input type="file" id="fileinput" />  
      </body>
     </html>
