--- a/cal/cal.html
+++ b/cal/cal.html
@@ -20,7 +20,7 @@
         <!-- This heading also notifies about the theme change.-->
         <h1 id="toast">Calculator</h1>
         <div class="top-buttons">
-          <a href="https://github.com/zxcodes/JavaScript-Calculator">
+          <a href="https://github.com">
             <img src="assets/GitHubLight.svg" alt="Sun Icon" height="22.5" width="22.5" id="github-icon">
           </a>
           <button type="button" onclick="changeTheme()" class="theme-button">
