--- a/calook.html
+++ b/calook.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta name="description" content="Simple Calculator With Dark Mode." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="assets/calculator.ico">
-  <link rel="stylesheet" href="styles/dark.css" id="theme" />
+  <link rel="icon" type="image/x-icon" href="calculator.ico">
+  <link rel="stylesheet" href="dark.css" id="theme" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
@@ -20,10 +20,10 @@
         <h1 id="toast">Calculator</h1>
         <div class="top-buttons">
           <a href="https://github.com">
-            <img src="assets/GitHubLight.svg" alt="Sun Icon" height="22.5" width="22.5" id="github-icon">
+            <img src="GitHubLight.svg" alt="Sun Icon" height="22.5" width="22.5" id="github-icon">
           </a>
           <button type="button" onclick="changeTheme()" class="theme-button">
-            <img src="assets/SunIcon.svg" alt="Theme Icon" height="19" width="19" id="theme-icon">
+            <img src="SunIcon.svg" alt="Theme Icon" height="19" width="19" id="theme-icon">
           </button>
         </div>
       </div>
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <script src="scripts/script.js">
+  <script src="script.js">
   </script>
 </body>
 
