--- a/calook.html
+++ b/calook.html
@@ -17,14 +17,11 @@
     <div class="container">
       <div class="header-container">
         <!-- This heading also notifies about the theme change.-->
-        <h1 id="toast">Calculator</h1>
+        <h1 id="toast">Ghost__Shell</h1>
         <div class="top-buttons">
           <a href="https://github.com">
             <img src="GitHubLight.svg" alt="Sun Icon" height="22.5" width="22.5" id="github-icon">
           </a>
-          <button type="button" onclick="changeTheme()" class="theme-button">
-            <img src="SunIcon.svg" alt="Theme Icon" height="19" width="19" id="theme-icon">
-          </button>
         </div>
       </div>
       <div class="first-row">
